syntax = "proto3";
package echo;

service Echo {
  rpc Say (EchoRequest) returns (EchoReply) {}
  rpc Health (HealthCheck) returns (EchoReply) {}
}

message EchoRequest { string message = 1; }
message EchoReply { string message = 1; }
message HealthCheck {}
